# bowopk-back

./: db.sqlite3  models.py  pyproject.toml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
backend/: settings.py  urls.py
